--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: ruby
+services:
+  - postgresql
+env:
+  - "RAILS_ENV=test"
+before_script:
+  - RAILS_ENV=test rails db:create db:migrate
