call out to rake instead of rails in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 env:
   - "RAILS_ENV=test"
 before_script:
-  - RAILS_ENV=test rails db:create db:migrate
+  - RAILS_ENV=test rake db:create db:migrate
