Change Item.available? to Item.available
It looks like I can't set `available?` in the model. That is obviously a
problem.

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -2,10 +2,10 @@ first_item:
   name: "A thing"
   description: "A thing I want"
   url: "www.internet"
-  available?: true
+  available: true
 
 second_item:
   name: "Another thing"
   description: "Another thing I want"
   url: "www.internet"
-  available?: false
+  available: false
